Added design to the layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="result">B</div> 
         </div>
         <div class="clear">  
-            <button class="clear-all">Clear</button>
-            <button class="delete">Delete</button>
+            <button class="clear-all">CLEAR</button>
+            <button class="delete">DELETE</button>
         </div>
         <div class="calculator-body">
             <div class="numerical">
@@ -49,6 +49,6 @@
             </div>
         </div>
     </div>
-    <footer>Copyright 2022 @anuragrik</footer>
+    <footer>Copyright ©2022 anuragrik</footer>
 </body>
 </html>
