Added functionality to calculator

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <script href="script.js" defer></script>
+    <script src="script.js" defer></script>
     <div class="calc">
         <div class="calculator-screen">
-            <div class="input-value">A</div>
-            <div class="result">B</div> 
+            <div class="input-value"></div>
+            <div class="result"></div> 
         </div>
         <div class="clear">  
             <button class="clear-all">CLEAR</button>
