Add bg-color on hover

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
         <div class="calculator-body">
             <div class="numerical">
                 <div>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button class="hoverable">1</button>
+                    <button class="hoverable">2</button>
+                    <button class="hoverable">3</button>
                 </div>
                 <div>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button class="hoverable">4</button>
+                    <button class="hoverable">5</button>
+                    <button class="hoverable">6</button>
                 </div>
                 <div>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button class="hoverable">7</button>
+                    <button class="hoverable">8</button>
+                    <button class="hoverable">9</button>
                 </div>
                 <div>
-                    <button>0</button>
-                    <button>.</button>
-                    <button>=</button>
+                    <button class="hoverable">0</button>
+                    <button class="hoverable">.</button>
+                    <button class="hoverable">=</button>
                 </div>
             </div>
             <div class="operator">
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
+                <button class="hoverable">+</button>
+                <button class="hoverable">-</button>
+                <button class="hoverable">*</button>
+                <button class="hoverable">/</button>
             </div>
         </div>
     </div>
